--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,21 +23,7 @@ jobs:
     - name: Build the binary
       run: npm run build && npm run package
 
-    - name: Create GitHub Release
-      id: create_release
-      uses: actions/create-release@v1
+    - name: Release the binary
+      uses: ncipollo/release-action@v1
       with:
-        tag_name: ${{ github.ref }}
-        release_name: Release ${{ github.ref }}
-        draft: false
-        prerelease: false
-
-    - name: Upload Release Asset
-      id: upload-release-asset 
-      uses: actions/upload-release-asset@v1
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./build.cjs # Update this to match the output binary path
-        asset_name: mercury-cli
-        asset_content_type: application/octet-stream
-
+        artifacts: "build-*"
