--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,6 +8,17 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        arch:
+          - x64
+          - arm64
+        node-version:
+          - node18
+        os:
+          - linux
+          - macos
+          - win
     steps:
     - name: Check out repository
       uses: actions/checkout@v2
@@ -21,9 +32,18 @@ jobs:
       run: npm install
 
     - name: Build the binary
-      run: npm run build && npm run package
+      run: npm run build 
 
-    - name: Release the binary
-      uses: ncipollo/release-action@v1
+    - name: Package into node binary
+      uses: lando/pkg-action@v2
       with:
-        artifacts: "build-*"
+        entrypoint: build.cjs
+        arch: ${{ matrix.arch }}
+        node-version: ${{ matrix.node-version }}
+        os: ${{ matrix.os }}
+        upload: true
+
+    #- name: Release the binary
+      #uses: ncipollo/release-action@v1
+      #with:
+        #artifacts: "build-*"
